[gd_scene load_steps=15 format=2]

[ext_resource path="res://ASSETS/ElectroBall1.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/ElectroBall2.png" type="Texture" id=2]
[ext_resource path="res://SCENES/ElectroBall.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/explosion/2.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/explosion/4.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/explosion/7.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/explosion/6.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/explosion/3.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/explosion/1.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/explosion/5.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.08276

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="ElectroBall" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -12, -12 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
frame = 1
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
